<?xml version="1.0"?>
<package>
  <name>tooro_dummy</name>
  <version>0.0.0</version>
  <description>The tooro_dummy package</description>
  <maintainer email="john@todo.todo">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>

  <test_depend>rostest</test_depend>


</package>
